cmake_minimum_required(VERSION 2.6)

PROJECT(AIVI-Lab1)

IF(NOT CMAKE_BUILD_TYPE)
  SET(CMAKE_BUILD_TYPE "Debug" CACHE STRING "CMAKE_BUILD_TYPE: Choose the type of build, options are: None(CMAKE_CXX_FLAGS or CMAKE_C_FLAGS used) Debug Release RelWithDebInfo MinSizeRel." FORCE)
ENDIF(NOT CMAKE_BUILD_TYPE)

SET(TARGET "lab1")

SET(SRC lab1.cpp utils.hpp utils.cpp)

ADD_DEFINITIONS(-Wall)

SET("OpenCV_DIR" "~/opencv-2.4.9/build/")
set(OpenCV_FOUND 1)
find_package(OpenCV REQUIRED)
set(OpenCV_FOUND 1)

#FIND_PACKAGE(OpenCV REQUIRED)
#INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIR})
#INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})

ADD_EXECUTABLE(${TARGET} ${SRC})
TARGET_LINK_LIBRARIES(${TARGET} ${OpenCV_LIBS})
